--- a/App.xaml
+++ b/App.xaml
@@ -1,6 +1,7 @@
 <Application x:Class="RimWorldTranslationTool.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             Startup="OnApplicationStartup">
     <Application.Resources>
         <ResourceDictionary>
             <!-- 轉換器 -->
